--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html{
   max-width: 400px;
   min-width: 300px;
   margin: 0 auto;
-  color: #C75B7A
+  color: #C75B7A  
 }
 
 #container,
@@ -44,6 +44,13 @@ html{
   margin-bottom: 15px;
   font-size: 20px;
   border-radius: 5px;
+}
+.a-button{
+  color:darkblue;
+  margin-top: 3rem;
+}
+.footer{
+  padding-top: 3rem;
 }
 
 
